# retriever

./: .gitignore  ADMIN_DASHBOARD_GUIDE.md  CHANGELOG.md  DEVELOPER_CONSOLE_GUIDE.md  Dockerfile  ONBOARDING_WORKFLOW.md  PROJECT_STATUS.md  ROADMAP.md  SELF_AWARE_RAG_PLAN.md  TECH_DEBT.md  docker-compose.yml  package-lock.json  package.json  render.yaml  retriever_comprehensive_guide.md  retriever_rag_analysis.md  vercel.json
apps/api/: Dockerfile  docker-compose.test.yml  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2c1d4e3f5a6b_add_users_and_user_isolation.py  3e9a1b2c4d5f_fix_missing_tables_and_columns.py  4a2b3c5d6e7f_add_tags_and_metadata_index.py  4c7d8e9f0a1b_add_role_and_key_id_to_inference_logs.py  5a1b2c3d4e5f_add_notes_to_inference_logs.py  6b2c3d4e5f6a_create_semantic_cache_table.py  6f1d7e5a6b2c_create_chat_message_feedback.py  7a7ee5dd77dd_initial_schema_baseline.py  7b3c4d5e6f8g_add_cost_usd_to_inference_logs.py  7c3d4e5f6a7b_add_hash_columns_to_audit_logs.py  8b1c5d2e9f40_add_chat_message_tenant_id.py  9a0b1c2d3e4f_add_evaluation_tables.py  9b2c3d4e5f6a_add_scores_to_feedback.py
apps/api/scripts/: generate_openapi.py
apps/api/src/: config.py  container.py  main.py
apps/api/src/adapters/: __init__.py
apps/api/src/adapters/api/: security.py
apps/api/src/adapters/broker/: __init__.py  celery_publisher.py  noop_event_publisher.py  rabbitmq_event_publisher.py
apps/api/src/adapters/cache/: __init__.py  config_cache.py
apps/api/src/adapters/cognitive/: __init__.py  anthropic_adapter.py  brave_adapter.py  corrective_retrieval_adapter.py  deepeval_evaluator.py  embedding_adapter.py  hf_embedding_adapter.py  ollama_embedding_adapter.py  openai_adapter.py  pdf_parser.py  query_intent_adapter.py  query_rewriter_adapter.py  ragas_evaluator.py  reranker_adapter.py  routing_provider.py  self_query_adapter.py  tavily_adapter.py  tiktoken_chunker.py
apps/api/src/adapters/database/: __init__.py  admin_repository.py  audit_repository.py  config_repository.py  connection.py  document_repository.py  evaluation_repository.py  feedback_repository.py  identity_repository.py  inference_repository.py  models.py  pagination.py  semantic_cache.py  setup.py  tenant_repository.py  user_repository.py
apps/api/src/adapters/guardrails/: llm_safety_guard.py
apps/api/src/adapters/ingestion/: sync_ingestion_service.py
apps/api/src/adapters/notification/: logging_adapter.py
apps/api/src/adapters/storage/: __init__.py  (+2 more)
apps/api/src/routers/: admin.py  chat.py  document.py  health.py  search.py  tenant.py
apps/api/src/schemas/: __init__.py  admin.py  chat.py  document.py  evaluation.py  search.py  tenant.py
apps/api/src/scripts/: ingest_self.py
apps/api/tests/: __init__.py  conftest.py  test_admin_api.py  test_anthropic.py  test_architecture.py  test_cache_adapter.py  test_config_system.py  test_corrective_retrieval.py  test_database_adapters.py  test_embedding.py  test_events.py  test_extraction.py  test_feedback.py  test_flaws_fixes.py  test_health.py  test_inference.py  test_ingestion.py  test_integration.py  test_keyword_repository.py  test_local_storage.py  test_metadata_filter.py  test_milestone11.py  test_milestone12.py  test_milestone13.py  test_milestone14.py  test_milestone15.py  test_model_failover.py  test_new_fixes.py  test_presigned.py  test_query_intent.py  test_reranker.py  test_retrieval.py  test_search_quality.py  test_self_query.py  test_telemetry.py  test_telemetry_setup.py  test_tenant_domain.py  test_token_cost.py  test_vector_repository.py  test_vision.py  (+7 more)
workers/: Dockerfile.worker  pyproject.toml
workers/src/: celery_app.py  event_consumer.py  main.py
workers/src/sandbox/: __init__.py
workers/src/tasks/: __init__.py  eval_tasks.py
(+136 files in other folders)
