[project]
name = "retriever-workers"
version = "0.1.0"
description = "Celery Workers for Retriever platform background ingestion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.3.0",
    "redis>=5.0.0",
    "pika>=1.3.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "pypdf>=4.0.0",
    "pdfplumber>=0.11.0",
    "tiktoken>=0.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"
