[project]
name = "retriever-workers"
version = "0.1.0"
description = "RabbitMQ workers for Retriever platform background ingestion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.4.0",
    "pika>=1.3.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "pypdf>=4.0.0",
    "pdfplumber>=0.11.0",
    "tiktoken>=0.6.0",
    "boto3>=1.34.0",
    "Pillow>=10.0.0",
    "cryptography>=42.0.0",
    "openai>=1.0.0",
    "ragas>=0.2.0",
    "deepeval>=0.21.0",
    "datasets>=2.0.0",
    "pytesseract>=0.3.10",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"
