[project]
name = "retriever-api"
version = "0.1.0"
description = "FastAPI Backend for Retriever Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "pika>=1.3.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "structlog>=24.1.0",
    "opentelemetry-api>=1.23.0",
    "opentelemetry-sdk>=1.23.0",
    "opentelemetry-instrumentation-fastapi>=0.44b0",
    "tiktoken>=0.6.0",
    "alembic>=1.13.0",
    "pdfplumber>=0.11.0",
    "pgvector>=0.3.0",
    "celery[redis]>=5.4.0",
    "cohere>=5.0.0",
    "openai>=1.0.0",
    "prometheus-client>=0.19.0",
    "sentry-sdk[opentelemetry]>=2.0.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "RUF"]
ignore = ["E501", "E712", "N803", "N815", "B008", "B017", "E402", "RUF005"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = [
    "../..",
]
